--- a/thesis/Rakefile
+++ b/thesis/Rakefile
@@ -20,12 +20,14 @@ task :mkpdf do
     end #余分を削除したものを新たに書き込み
   end
 
-  appendix_lines = File.readlines("appendix/appendix.tex")
+=begin
+     appendix_lines = File.readlines("appendix/appendix.tex")
   appendix_lines.unshift("\\begin{appendix}")
   appendix_lines.push("\\end{appendix}")
   File.open("appendix/appendix.tex", "w") do |f|
     appendix_lines.each { |line| f.print line }
   end
+=end
 
   thesis_setup = convert_tex() #pdfの元を作成 thesis.tex
   File.open("#{pdf_file}/#{pdf_file}.tex", "w") do |f|
